tests/specs/ecosystem/zone_x/zone_x/0_3_0.test
zone-x/zone-x/0.3.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'TimeZone'.
export function getUsersTimeZone(): TimeZone {
                                    ~~~~~~~~
    at file://<tmpdir>/src/index.ts:2:37

TS2304 [ERROR]: Cannot find name 'TimeZone'.
export function setUserTimeZone(timeZone: TimeZone): string {
                                          ~~~~~~~~
    at file://<tmpdir>/src/index.ts:6:43

Found 2 errors.

error: Type checking failed.

